<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGroupActivity">

    <EditText
        android:id="@+id/groupCreateNameInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/fridge_label"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/group_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/groupCreatePasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_incorrect"
        android:importantForAutofill="no"
        android:inputType="text|textVisiblePassword"
        android:text="@string/password_label"
        app:layout_constraintEnd_toEndOf="@+id/groupCreateNameInput"
        app:layout_constraintStart_toStartOf="@+id/groupCreateNameInput"
        app:layout_constraintTop_toBottomOf="@+id/groupCreateNameInput" />

    <include
        layout="@layout/image_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/groupCreateNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/groupMemberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/group_members"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupCreatePasswordInput"
        app:layout_constraintVertical_bias="0.120000005" />

    <Button
        android:id="@+id/addGroupMembersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_group_members"
        app:layout_constraintEnd_toEndOf="@+id/groupMemberLabel"
        app:layout_constraintStart_toStartOf="@+id/groupMemberLabel"
        app:layout_constraintTop_toBottomOf="@+id/groupMemberLabel" />

    <Button
        android:id="@+id/createGroupConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/create_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupCreatePasswordInput"
        app:layout_constraintVertical_bias="0.84000003" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/memberRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/createGroupConfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addGroupMembersButton" />
</androidx.constraintlayout.widget.ConstraintLayout>