<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signUpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_label"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailAddressInput"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLabel" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/emailAddressInput"
        android:text="@string/email_label"
        app:layout_constraintBottom_toBottomOf="@+id/emailAddressInput"
        app:layout_constraintEnd_toStartOf="@+id/emailAddressInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailAddressInput" />

    <EditText
        android:id="@+id/signUpPasswordInput"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailAddressInput"
        app:layout_constraintStart_toStartOf="@+id/emailAddressInput"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressInput"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/signUpPasswordInput"
        android:text="@string/password_label"
        app:layout_constraintBottom_toBottomOf="@+id/signUpPasswordInput"
        app:layout_constraintEnd_toStartOf="@+id/signUpPasswordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signUpPasswordInput" />

    <EditText
        android:id="@+id/signUpConfirmPassword"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/signUpPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/signUpPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordInput"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/confirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/signUpConfirmPassword"
        android:text="@string/confirm_password_label"
        app:layout_constraintBottom_toBottomOf="@+id/signUpConfirmPassword"
        app:layout_constraintEnd_toStartOf="@+id/signUpConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signUpConfirmPassword" />

    <Button
        android:id="@+id/signUpContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpConfirmPassword" />

    <TextView
        android:id="@+id/signInTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpContinueButton" />

    <Button
        android:id="@+id/signUpSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTextLabel" />

    <TextView
        android:id="@+id/passwordsDoNotMatchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwords_do_not_match"
        android:textColor="@color/design_default_color_error"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/signUpContinueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpConfirmPassword"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>