<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <include
                layout="@layout/image_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/memberName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username_label" />

                <TextView
                    android:id="@+id/memberRank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rank" />

                <Spinner
                    android:id="@+id/adminRoleSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />

                <Button
                    android:id="@+id/adminKickUserButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kick_from_group" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>