<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupDetailActivity">

    <TextView
        android:id="@+id/groupDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="108dp"
        android:text="@string/group_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/groupDetailPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_label"
        app:layout_constraintEnd_toEndOf="@+id/groupDetailName"
        app:layout_constraintStart_toStartOf="@+id/groupDetailName"
        app:layout_constraintTop_toBottomOf="@+id/groupDetailName" />

    <include
        layout="@layout/image_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/groupDetailName"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupDetailMemberRecycler"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupDetailPassword" />

    <EditText
        android:id="@+id/groupNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/group_members"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/group_name"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/groupPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/password_label"
        android:importantForAutofill="no"
        android:inputType="text|textVisiblePassword"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/groupNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/groupNameEditText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMembersFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/add_group_members"
        app:backgroundTint="@color/khaki"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupDetailMemberRecycler"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>